--- a/embed/inspiratv.html
+++ b/embed/inspiratv.html
@@ -18,7 +18,7 @@
 <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 <div align="center">
 <video poster="https://cdn.jwplayer.com/v2/media/Q8XUdAY1/poster.jpg?width=720" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-<source src="https://ihon.herokuapp.com/http://iptv.serverqu.com:1935/klikstream/inspiratv.stream/playlist.m3u8" type="application/x-mpegURL" />
+<source src="https://v2.siar.us/inspiratv/live/playlist.m3u8" type="application/x-mpegURL" />
 </video>
 <script>
       window.hola_player();
