--- a/embed/&tv.html
+++ b/embed/&tv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://liveorigin01.hbogoasia.com:8443/origin/live/main/HBO/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://streamitv.multitvsolution.in/idvo/aphdhindi.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
