--- a/embed/animalplanet.html
+++ b/embed/animalplanet.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Animal_Planet_logo_%28black_and_green%29.svg/1200px-Animal_Planet_logo_%28black_and_green%29.svg.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://shivyrubycors.herokuapp.com/http://80.80.160.168/live/1/live.m3u8" type="application/x-mpegURL" />
+        <source src="https://livecdn.fptplay.net/qnetlive/animalplanet_2000.stream/chunklist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
