--- a/embed/r3.html
+++ b/embed/r3.html
@@ -20,7 +20,7 @@
         width="596"
         class="video-js vjs-default-skin vjs-big-play-centered"
         >
-      <source src="https://livetvhooq.akamaized.net/ed9f674616594d96bbe00f93ab8d7672/eu-central-1/5493668622001/profile_3/chunklist.m3u8?hdnts=st=1576169705~exp=9007200830910696~acl=/ed9f674616594d96bbe00f93ab8d7672/*/profile_3/chunklist.m3u8*~hmac=c464efdac528cb4b0e4c27ada7a0480ce7bce6030e39ab45e36833b4bc9b9fbd" type="application/x-mpegURL" />
+      <source src="https://livecdn.fptplay.net/qnetlive/babyfirst_hls.smil/chunklist_b2500000.m3u8" type="application/x-mpegURL" />
     </video-js>
     </center>
         
