--- a/embed/tve.html
+++ b/embed/tve.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-       <meta charset="utf-8" />
+   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+       
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
        <!-- Start Meta Ads -->
        <meta name="platform" content="desktop" />
        <meta name="site_name" content="streaming" />
        <!-- End Meta Ads -->
-       <title>Live Streaming</title>
+       <title>Indosiar Live Streaming</title>
        <style>
            body {
                margin:0;
@@ -15,16 +15,18 @@
                overflow: hidden;
            }
        </style>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://208.115.215.42/Star_Plus_HD_India/tracks-v1a1/mono.m3u8" type="application/x-mpegURL" />
+        <video poster="https://upload.wikimedia.org/wikipedia/id/f/f2/Logo_tvedukasi_baru.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://kastproxy-us.herokuapp.com/http://118.98.221.131/live/tvedukasi_5/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
-      window.hola_player();
-     </script>
+    (function(){
+      window.hola_player({title: 'TV Edukasi'});
+    })();
+  </script>
      </div>
    </body>
 </html>
