--- a/live/tvedukasi.html
+++ b/live/tvedukasi.html
@@ -30,7 +30,7 @@
 <div align="center">
 <div id="player"></div>
 <iframe
-    src="https://www.youtube-nocookie.com/embed/live_stream?channel=UCI1kYAAxqfbrFf3mbKwkflA&modestbranding=1&?autoplay=1"
+    src="embed/tve"
     height="340"
     width="596"
     frameborder="0"
