--- a/live/tvedukasi.html
+++ b/live/tvedukasi.html
@@ -30,7 +30,7 @@
 <div align="center">
 <div id="player"></div>
 <iframe
-    src="embed/tve"
+    src="../embed/tve"
     height="340"
     width="596"
     frameborder="0"
