--- a/embed/tve.html
+++ b/embed/tve.html
@@ -7,7 +7,7 @@
        <meta name="platform" content="desktop" />
        <meta name="site_name" content="streaming" />
        <!-- End Meta Ads -->
-       <title>Indosiar Live Streaming</title>
+       <title>TV Edukasi Live Streaming</title>
        <style>
            body {
                margin:0;
