--- a/live/fajartv.html
+++ b/live/fajartv.html
@@ -48,7 +48,7 @@
         title: 'FajarTV',       
         image: 'https://3.bp.blogspot.com/-rrCMa0D0f64/WBA6PmhqmEI/AAAAAAAAFt8/ma75rg1sAoYTdIHJWbeZ0slZTVh4yXkngCPcBGAYYCw/s1600/logo_fajartv_0538.png',       
         sources: [
-            {file: 'https://zet.pluginsandthemes.ro/http://122.248.43.138:1935/ch27/myStream/playlist.m3u8'},
+            {file: 'https://kastproxy-us.herokuapp.com/http://122.248.43.138:1935/ch27/myStream/playlist.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
