--- a/embed/rcti2.html
+++ b/embed/rcti2.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video preload="none" class="video-js vjs-fluid vjs-default-skin" width="596" height="340" controls autoplay>
-    <source src="https://livetvhooq.akamaized.net/d182c52b34984076be9817e526e2bb5e/ap-southeast-1/5493668622001/profile_0/chunklist.m3u8?hdnts=st=1582267313~exp=9007200837008304~acl=/d182c52b34984076be9817e526e2bb5e/*/profile_0/chunklist.m3u8*~hmac=18758c344b235a0ecdbc69fef62dd658a858efa699c4e921e9af50109a58f69f" type="application/x-mpegurl">
+    <source src="https://vcdn2.rctiplus.id:443/live/eds/rcti_fta/live_fta/rcti_fta.m3u8" type="application/x-mpegurl">
   </video>
   <script>
     (function(){
