--- a/embed/rcti.html
+++ b/embed/rcti.html
@@ -45,7 +45,7 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		abouttext: 'Design by : mbah nunung Online',
 		aboutlink: 'https://www.mbahnunungonline.net',
 		autostart: 'true',
-		file: "https://live.cnnindonesia.com/livecnn/smil:cnntv.smil/playlist.m3u8",
+		file: "https://vcdn2.rctiplus.id/live/eds/rcti_fta/live_fta/rcti_fta.m3u8",
 		title: "CNN Indonesia",
 		image: "https://cdn4.mbahnunungonline.net/images/rcti.jpg"
 	});
