--- a/live/rcti.html
+++ b/live/rcti.html
@@ -29,7 +29,7 @@
   
 <body bgcolor="#2f3542" text="white" topmargin="0" leftmargin="0" rightmargin="0">
 <div align="center">
-<iframe src="https://embed.rctiplus.com/live/rcti/inewsid" width="596" height="335" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="/embed/rcti2" width="596" height="335" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 </body>
 </html>
