--- a/embed/SonyOne.html
+++ b/embed/SonyOne.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-bBGQE3OUqj8/XJ0BeR7rdsI/AAAAAAAALLQ/cprxar2YSpIfnQ-sXU-Ru01jSRIRqndXQCLcBGAs/s1600/Sony-ONE.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h143/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://50.7.161.82:8278/streams/d/SetOne/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
