--- a/embed/tv5monde.html
+++ b/embed/tv5monde.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="../img/thumbs/tv5_monde.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://livecdn.fptplay.net/world/tv5_hls.smil/chunklist_b2500000.m3u8" type="application/x-mpegURL" />
+        <source src="https://tv5asieen-i.akamaihd.net/hls/live/631617/tv5asieen/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
