--- a/live/natpeople.html
+++ b/live/natpeople.html
@@ -29,7 +29,7 @@
             live        : true,
             imageUrl    : "https://i.ytimg.com/vi/O0cSE2kSqe4/maxresdefault.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://nonton.site:8443/live/novi/novi123/455.m3u8",
+            videoUrl    : "",
             adRules     : '',
             features: {
                 loadByDiv:true,
