--- a/embed/natpeople.html
+++ b/embed/natpeople.html
@@ -35,8 +35,8 @@ document.getElementsByTagName('head')[0].appendChild(meta);
 		aboutlink: 'https://www.mbahnunungonline.net',
 		autostart: 'true',
 		file: "https://nonton.site:8443/live/novi/novi123/455.m3u8",
-		title: "GTV",
-		image: "https://content.jwplatform.com/v2/media/qIhtKP6C/poster.jpg?width=720"
+		title: "Nat People",
+		image: "/poster.jpg?width=720"
 	});
 	jwplayer().onError(function(){
 		jwplayer().load({
