--- a/embed/dwtv.html
+++ b/embed/dwtv.html
@@ -16,7 +16,7 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video preload="none" class="video-js vjs-fluid vjs-default-skin" width="596" height="340" controls autoplay>
@@ -28,7 +28,7 @@
         poster: '../img/thumbs/Deutsche_Welle_lrg.jpg?v=8.3.2',
         watermark: {
           image: '',
-          title: 'NET.',
+          title: 'DW',
           position: 'top-left',
           fadeTime: null,
         },
