--- a/embed/bbcarabic.html
+++ b/embed/bbcarabic.html
@@ -16,11 +16,11 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://cdn1.mbahnunungonline.net/v3/hola_player/hola_player.js"></script>
+       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/--p5ZodODnY0/XMfJ5-AufDI/AAAAAAAALYk/VqWmmm2Jqqoosdpm-zJ5N8rZv9LyFfYnACLcBGAs/s1600/bbc_arabic_new_branding.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://bbc.mbahnunungonline.org/live/disk1/BBC_Arabic/anevia1/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://vs-hls-ww.live.cf.md.bbci.co.uk/pool_902/live/nonuk/bbc_arabic_tv/bbc_arabic_tv.isml/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
