--- a/embed/balitv.html
+++ b/embed/balitv.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "https://cdn.jwplayer.com/v2/media/nxykbjJL/poster.jpg?width=720",
             channel     : "livestreaming",
-            videoUrl    : "https://anevia114.mncnow.id:443/live/eds/BaliTV/sa_hls/BaliTV.m3u8",
+            videoUrl    : "https://cdn-telkomsel-01.akamaized.net/Content/HLS/Live/channel(8e867ae0-b2c0-4968-9f60-a11aee8c0987)/index.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
