--- a/embed/jtv.html
+++ b/embed/jtv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-NYSqoTEERfY/XMsZIP-mYlI/AAAAAAAALZs/Ko_L0Zq5KvEzi_J0JOqdkePk_cD98U-NgCLcBGAs/s1600/JTVsuroboyo.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://zet.pluginsandthemes.ro/http://122.248.43.138:1935/ch2/myStream/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://122.248.43.138:1935/ch2/myStream/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
