--- a/embed/gtv.html
+++ b/embed/gtv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# warningfm: http://ogp.me/ns/warningfm#">
-    <title>Live Streaming RCTI</title>
+    <title>Live Streaming GTV</title>
     <meta charset="utf-8">
     <meta name="robots" content="noindex">
     <meta property="fb:app_id" content="306338632814491"/>
