--- a/live/gtv2.html
+++ b/live/gtv2.html
@@ -25,7 +25,7 @@
   <script>
     (function(){
       window.hola_player({
-        poster: '../img/thumbs/rcti.jpg?v=8.3.2',
+        poster: 'https://assets.pikiran-rakyat.com/crop/0x0:0x0/x/photo/2021/01/30/1097147994.png?v=8.3.2',
         watermark: {
           image: '',
           position: 'top-left',
