--- a/live/gtv.html
+++ b/live/gtv.html
@@ -29,7 +29,7 @@
   
 <body bgcolor="#2f3542" text="white" topmargin="0" leftmargin="0" rightmargin="0">
 <div align="center">
-<iframe src="https://embed.rctiplus.com/live/gtv/inewsid" width="596" height="335" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<iframe src="/embed/gtv" width="596" height="335" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </div>
 </body>
 </html>
