--- a/embed/tvmuh.html
+++ b/embed/tvmuh.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "https://2.bp.blogspot.com/-jxRFHO7z13w/W-hgLiSi7aI/AAAAAAAAKEA/gtlBn0192xoPNia2g4gNWJea1IdZlDgZACLcBGAs/s1600/logo_tvmu.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://liveanevia.mncnow.id/live/eds/TVMuhammadiyah/sa_hls/TVMuhammadiyah.m3u8",
+            videoUrl    : "https://5d63d49f772ce.streamlock.net/tvmu/udp.stream_360p/playlist.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
