--- a/embed/tvmuh.html
+++ b/embed/tvmuh.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-       
-       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-       <!-- Start Meta Ads -->
-       <meta name="platform" content="desktop" />
-       <meta name="site_name" content="streaming" />
-       <!-- End Meta Ads -->
-       <title>Live Streaming</title>
-       <style>
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Live Streaming</title>
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="initial-scale = 1.0, user-scalable = no, width=device-width, height=device-height, maximum-scale=1.0">
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="description" content="Live Streaming" />
+<link rel="stylesheet" href="//vjs.zencdn.net/5.4.6/video-js.min.css?v=1.8">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<style>
            body {
                margin:0;
                padding:0;
                overflow: hidden;
+               background:#2f3542;
            }
        </style>
-       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
-	   
-       <div align="center">
-        <video poster="https://2.bp.blogspot.com/-jxRFHO7z13w/W-hgLiSi7aI/AAAAAAAAKEA/gtlBn0192xoPNia2g4gNWJea1IdZlDgZACLcBGAs/s1600/logo_tvmu.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://5d63d49f772ce.streamlock.net/tvmu/udp.stream_360p/playlist.m3u8" type="application/x-mpegURL" />
-       </video>
-     <script>
-    (function(){
-      window.hola_player({title: 'tvMu'});
-    })();
-  </script>
-     </div>
-   </body>
+<center>
+<script>
+        var video_title = "Live Streaming";
+    </script>
+<div id="video" class="fp-slim fp-mute"></div>
+<script src="https://warningfm.github.io/nnVideo/nnVideo.core.js?v=98c76261ffc">
+        {
+            target      : 'video',
+            title       : 'Live Streaming',
+            autoplay    : false,
+            mute        : false,
+            live        : true,
+            imageUrl    : "https://2.bp.blogspot.com/-jxRFHO7z13w/W-hgLiSi7aI/AAAAAAAAKEA/gtlBn0192xoPNia2g4gNWJea1IdZlDgZACLcBGAs/s1600/logo_tvmu.jpg?v=8.3.2",
+            channel     : "livestreaming",
+            videoUrl    : "https://5d63d49f772ce.streamlock.net/tvmu/udp.stream_360p/playlist.m3u8",
+            adRules     : '',
+            features: {
+                loadByDiv:true,
+                smartAutoplay: true            }
+        }
+        </script>
+</center>
+</body>
 </html>
