--- a/embed/blue_ant.html
+++ b/embed/blue_ant.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "../img/thumbs/BAextreme-600x403.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://livecdn.fptplay.net/hda/blueantext_hls.smil/chunklist.m3u8",
+            videoUrl    : "http://45.126.83.51/dr9445/h/h15/index.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
