--- a/embed/kplus.html
+++ b/embed/kplus.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://1.bp.blogspot.com/-dvcIwnpAzbE/W-f7eYgTUcI/AAAAAAAAKDg/kVz_dRmRjRs6KE58tDiO5zjySidU64L7wCLcBGAs/s1600/KPlus.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h08/index.m3u8" type="application/x-mpegURL" />
+        <source src="http://rr.dens.tv/h/h08/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
