--- a/embed/ZBioskop.html
+++ b/embed/ZBioskop.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://3.bp.blogspot.com/-IAJL70eGt68/XMY7x2zCE4I/AAAAAAAALXU/SkAnsL54b7wFR4R-8Bv5TbP_aueIMqRzACLcBGAs/s1600/zee-bioskop.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s32/index.m3u8" type="application/x-mpegURL" />
+        <source src="http://rr2.dens.tv/s/s32/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
