--- a/embed/makkah-live.html
+++ b/embed/makkah-live.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video preload="none" class="video-js vjs-fluid vjs-default-skin" width="596" height="340" controls autoplay>
-    <source src="https://kastproxy-us.herokuapp.com/http://makkahtv.srfms.com:1935/makkahtv/livestream/playlist.m3u8" type="application/x-mpegurl">
+    <source src="https://cdnamd-hls-globecast.akamaized.net/live/ramdisk/saudi_quran/hls1/saudi_quran.m3u8" type="application/x-mpegurl">
   </video>
   <script>
     (function(){
