--- a/embed/&tv.html
+++ b/embed/&tv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://208.115.215.42/Star_Plus_HD_India/tracks-v1a1/mono.m3u8" type="application/x-mpegURL" />
+        <source src="https://5d63d49f772ce.streamlock.net/tvmu/udp.stream_360p/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
