--- a/live/ta-tv.html
+++ b/live/ta-tv.html
@@ -48,7 +48,7 @@
         title: 'TATV',       
         image: 'https://1.bp.blogspot.com/-9hz4LUJ4WRA/V1uJN0S6tDI/AAAAAAAAFdI/zGHYUaWu8o0_G9pDry5RFphHloOM8D3-QCLcB/s1600/tatv_solo.jpg',       
         sources: [
-            {file: 'https://video2.onlivestreaming.net/tatv/live.sdp/playlist.m3u8'},
+            {file: 'https://v2.siar.us/bci/abr/playlist.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
