--- a/live/jitv.html
+++ b/live/jitv.html
@@ -48,7 +48,7 @@
         title: 'JITV',       
         image: 'https://cdn.jwplayer.com/v2/media/CzGrSEvn/poster.jpg?width=720',       
         sources: [
-            {file: 'https://ihon.herokuapp.com/http://202.169.224.76:1935/tv/jitv/playlist.m3u8'},
+            {file: 'https://mam.jogjaprov.go.id:1937/tv/jitv/chunklist_w879117025.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
