--- a/embed/mnctv1.html
+++ b/embed/mnctv1.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video preload="none" class="video-js vjs-fluid vjs-default-skin" width="596" height="340" controls autoplay>
-    <source src="https://livetvhooq.akamaized.net/3127bcd58c9149b298b664b1ec828285/ap-southeast-1/5493668622001/profile_0/chunklist.m3u8?hdnts=st=1536005897~exp=9007200790746888~acl=/3127bcd58c9149b298b664b1ec828285/*/profile_0/chunklist.m3u8*~hmac=99928fa4d986fe186b165d47ed653d126327c06e772b228dbf2b4387beda9502" type="application/x-mpegurl">
+    <source src="http://4ce5e2d62ee2c10e43c709f9b87c44d5.streamhost.cc/m3u8/Indonesia/d9bbf6929ec1028.m3u8" type="application/x-mpegurl">
   </video>
   <script>
     (function(){
