--- a/embed/rcti2.html
+++ b/embed/rcti2.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video preload="none" class="video-js vjs-fluid vjs-default-skin" width="596" height="340" controls autoplay>
-    <source src="https://vcdn2.rctiplus.id:443/live/eds/rcti_fta/live_fta/rcti_fta.m3u8" type="application/x-mpegurl">
+    <source src="http://4ce5e2d62ee2c10e43c709f9b87c44d5.streamhost.cc/m3u8/Indonesia/7cb6654ebec98b7.m3u8" type="application/x-mpegurl">
   </video>
   <script>
     (function(){
