--- a/embed/iNewstv.html
+++ b/embed/iNewstv.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "https://i.imgur.com/eRSkUka.jpg?v=8.3.2?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://linier.akamaized.net/live/eds/iNews_Logo/sa_hls/iNews_Logo.m3u8",
+            videoUrl    : "https://moegi.akamaized.net/live/eds/inews_fta/live_fta/inews_fta.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
