--- a/embed/mnctv1.html
+++ b/embed/mnctv1.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video preload="none" class="video-js vjs-fluid vjs-default-skin" width="596" height="340" controls autoplay>
-    <source src="http://4ce5e2d62ee2c10e43c709f9b87c44d5.streamhost.cc/m3u8/Indonesia/d9bbf6929ec1028.m3u8" type="application/x-mpegurl">
+    <source src="https://moegi.akamaized.net/live/eds/mnctv_fta/live_fta/mnctv_fta.m3u8" type="application/x-mpegurl">
   </video>
   <script>
     (function(){
