--- a/embed/gtv3.html
+++ b/embed/gtv3.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video preload="none" class="video-js vjs-fluid vjs-default-skin" width="596" height="340" controls autoplay>
-    <source src="http://93.190.139.34:8278/streams/d/Gtv/playlist.m3u8" type="application/x-mpegurl">
+    <source src="https://moegi.akamaized.net/live/eds/gtv_fta/live_fta/gtv_fta-avc1_1537200=6-mp4a_64000_eng=2.m3u8" type="application/x-mpegurl">
   </video>
   <script>
     (function(){
