--- a/embed/iNewstv.html
+++ b/embed/iNewstv.html
@@ -33,7 +33,7 @@
         },
         controls_watermark: {
           image: 'logo-metube-white.svg',
-          url: 'https://www.metube.id/live/MNCTV',
+          url: 'https://www.metube.id/live/iNewstv',
         },
       });
     })();
