--- a/embed/jimjamtv.html
+++ b/embed/jimjamtv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-i18eFvIKgks/W-OcB1mRX_I/AAAAAAAAKA8/6ERICYxsdSMo-f92ho_Bh23M2lb9npb7ACLcBGAs/s1600/jimjam_og.png?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://79.137.41.99/DisneyChannel/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://4ce5e2d62ee2c10e43c709f9b87c44d5.streamhost.cc/m3u8/Kids/7aa459d024f16bb.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
