--- a/embed/hits2.html
+++ b/embed/hits2.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="../img/thumbs/Hits.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://zet.pluginsandthemes.ro/http://rr.dens.tv/h/h37/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://zet.pluginsandthemes.ro/http://rr.dens.tv/h/h37/02.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
