--- a/embed/hits.html
+++ b/embed/hits.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "../img/thumbs/Hits.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "http://rr.dens.tv/h/h37/02.m3u8",
+            videoUrl    : "http://210.210.155.35/dr9445/h/h37/02.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
