--- a/embed/aswajatv.html
+++ b/embed/aswajatv.html
@@ -19,7 +19,7 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://4.bp.blogspot.com/-rQdpip6uyZU/W9fC771_t_I/AAAAAAAAJ3k/48vWVay1iFwI6TXKmWEK7gcNI5vLe4rzACLcBGAs/s1600/AswajaTV.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://nuchannel.tv/media/slideshow/1592665190122cdda157c2d459e96ada263e9815e5.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://kastproxy-us.herokuapp.com/http://stream1.ninmedia.tv:1935/nuchannel/udp.stream_360p/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
