--- a/embed/paytrentv.html
+++ b/embed/paytrentv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://2.bp.blogspot.com/-Z4KYTvhuyvo/W92VmeOENMI/AAAAAAAAAr0/Hlhd4sco4KYpxLp2jJ2-sx3Tbkx88CPfQCLcBGAs/s1600/paytrentv.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://livetvhooq.akamaized.net/902d04d98a094dc6a78e73166d108e3d/ap-southeast-1/5493668622001/profile_1/chunklist.m3u8?hdnts=st=1572085873~exp=9007200826826864~acl=/902d04d98a094dc6a78e73166d108e3d/*/profile_1/chunklist.m3u8*~hmac=252a726bb20fdb977834f11d3b83aa67138e81da32ef16b763a871e5ed767748" type="application/x-mpegURL" />
+        <source src="https://5e396e0211d7a.streamlock.net/ymtv/live/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
