--- a/live/jpm.html
+++ b/live/jpm.html
@@ -6,7 +6,7 @@
     <meta name="robots" content="noindex">
     <meta property="fb:app_id" content="306338632814491"/>
     <meta property="og:type" content="warningfm:station"/>
-    <meta property="og:url" content="https://tv.mbahnunungonline.net/live/celebestv"/>
+    <meta property="og:url" content="https://tv.mbahnunungonline.net/live/jpm"/>
     <meta property="og:type" content="movie" /> 
     <meta property="og:video:height" content="326" /> 
     <meta property="og:video:width" content="486" /> 
@@ -49,7 +49,7 @@
         title: 'CELEBESTV',       
         image: 'https://lh3.googleusercontent.com/-sA3owq6VbIc/VKrLMrXu1tI/AAAAAAAAAMM/g-9sPK_Q9jc/s500/celebestv.jpg',       
         sources: [
-            {file: 'https://5bb7d87891314.streamlock.net/celebesmedia/live/playlist.m3u8'},
+            {file: 'https://zet.pluginsandthemes.ro/http://122.248.43.138:1935/ch6/myStream/Playlist.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
