--- a/live/jpm.html
+++ b/live/jpm.html
@@ -49,7 +49,7 @@
         title: 'CELEBESTV',       
         image: 'https://lh3.googleusercontent.com/-sA3owq6VbIc/VKrLMrXu1tI/AAAAAAAAAMM/g-9sPK_Q9jc/s500/celebestv.jpg',       
         sources: [
-            {file: 'https://zet.pluginsandthemes.ro/http://122.248.43.138:1935/ch6/myStream/Playlist.m3u8'},
+            {file: 'https://kastproxy-us.herokuapp.com/http://122.248.43.138:1935/ch6/myStream/Playlist.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
