--- a/live/jpm.html
+++ b/live/jpm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head prefix="og:http://ogp.me/ns#">
-    <title>CELEBESTV</title>
+    <title>JPMTV</title>
     <meta charset="utf-8">
     <meta name="robots" content="noindex">
     <meta property="fb:app_id" content="306338632814491"/>
