--- a/live/jpm.html
+++ b/live/jpm.html
@@ -46,10 +46,10 @@
         aspectratio: '16:9',
         captions: {back: false, "default": false, fontsize: 14},
         playlist: [{ 
-        title: 'CELEBESTV',       
-        image: 'https://lh3.googleusercontent.com/-sA3owq6VbIc/VKrLMrXu1tI/AAAAAAAAAMM/g-9sPK_Q9jc/s500/celebestv.jpg',       
+        title: 'JPMTV',       
+        image: 'https://upload.wikimedia.org/wikipedia/commons/5/5e/Logo_JPM_Jawapos.png',       
         sources: [
-            {file: 'https://kastproxy-us.herokuapp.com/http://122.248.43.138:1935/ch6/myStream/Playlist.m3u8'},
+            {file: 'http://122.248.43.138:1935/ch6/myStream/Playlist.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
