--- a/embed/sbc.html
+++ b/embed/sbc.html
@@ -19,8 +19,8 @@
        <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://3.bp.blogspot.com/-pVrVc2ByBKk/Ws8tYW60MLI/AAAAAAAAIwc/7apQs8LYJGYhHd0Y5WzH0PCMayFlXggrACPcBGAYYCw/s1600/19.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://wowza58.indostreamserver.com:1935/langoday/live/playlist.m3u8" type="application/x-mpegURL" />
+        <video poster="https://1.bp.blogspot.com/-41VrraKgvvw/XxFcTcxsvoI/AAAAAAAAAyw/Ecz8GAFqTPk5tSOWLf64McsHzaXO3Nw6wCLcBGAsYHQ/s728/frekuensi-terbaru-magna-channel.png?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://edge.medcom.id/live-edge/smil:magna.smil/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
