--- a/live/sctv.html
+++ b/live/sctv.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# warningfm: http://ogp.me/ns/warningfm#">
-    <title>Magna Channel</title>
+    <title>SCTV</title>
     <meta charset="utf-8">
     <meta name="robots" content="noindex">
     <meta property="fb:app_id" content="306338632814491"/>
     <meta property="og:type" content="warningfm:station"/>
-    <meta property="og:url" content="https://tv.mbahnunungonline.net/live/magnaChannel"/>
+    <meta property="og:url" content="https://tv.mbahnunungonline.net/live/sctv"/>
     <meta property="og:type" content="movie" /> 
     <meta property="og:video:height" content="326" /> 
     <meta property="og:video:width" content="486" /> 
     <meta property="og:video:type" content="application/x-shockwave-flash" />
-    <meta property="og:title" content="magna" /> 
-    <meta property="og:description" content="Klik Gambarnya Boss untuk nonton Magna Channel langsung lewat Facebook." />
+    <meta property="og:title" content="SCTV" /> 
+    <meta property="og:description" content="Klik Gambarnya Boss untuk nonton SCTV langsung lewat Facebook." />
     <meta property="og:image" content="https://4.bp.blogspot.com/-MY_tDmwX6IM/UcA7YWdyNcI/AAAAAAAABvg/aW1BP6UtI_Q/s1600/sctv.png" />
     <meta property="og:video" content="https://cdn1.mbahnunungonline.net/player/player5.8.swf?file=livestream&type=rtmp&streamer=rtmp://xxxxxx&autostart=true&stretching=exactfit&volume=100&bandwidth=1&duration=0&showdigits=&&stretching=exactfit&backcolor=000000&frontcolor=ffffff&lightcolor=CD0000&screencolor=0000fff&volume=100&controlbar=over&autostart=true&displayclick=fullscreen&repeat=false&image=https://1.bp.blogspot.com/-kDtngMuap1o/VWvykuo0e2I/AAAAAAAAEq0/6Br99hZXvg8/s1600/inews-tv.jpg"/>
     <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
