--- a/embed/ntv.html
+++ b/embed/ntv.html
@@ -16,10 +16,10 @@
            }
        </style>
        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
+       <script src="https://cdnjs.mbahnunungonline.net/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://1.bp.blogspot.com/-9qJppgBaEBU/YKn40vRsqSI/AAAAAAAAM4k/0ZkEXwMFDog0ZL9XoBLWj5Wds8CdrsXLwCLcBGAsYHQ/s0/nusantara-tv.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://v6.siar.us/nusantaratv/live/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
