--- a/live/dangdutz.html
+++ b/live/dangdutz.html
@@ -48,7 +48,7 @@
         title: 'dangdutz',       
         image: 'https://1.bp.blogspot.com/-z3iDBM_3UhU/WKKITAAbdiI/AAAAAAAAIK4/IIt9FclM1ZcZzhVLhHYWzI07i3r1LWkSQCLcB/s1600/dangdutz.jpg',       
         sources: [
-            {file: 'https://kastproxy-us.herokuapp.com/http://edge.linknetott.swiftserve.com/live/BSgroup/amlst:dangdutch/playlist.m3u8'},
+            {file: 'https://kastproxy-us.herokuapp.com/http://stream1.ninmedia.tv:1935/maleo/udp.stream_360p/playlist.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
