--- a/embed/tvmuh.html
+++ b/embed/tvmuh.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head prefix="og:http://ogp.me/ns#"><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>dangdutz</title>
+    <title>TVMU</title>
     <meta name="robots" content="noindex">
     
     <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
