--- a/embed/almanartv.html
+++ b/embed/almanartv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://content.jwplatform.com/thumbs/DRvicUSg-720.jpg?v=8.3.2" id="video-player" class="video-js  vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="http://live2.mediaforall.net:1935/liveorigin/livestream/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://manar.live/iptv/index.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
