--- a/embed/r6.html
+++ b/embed/r6.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "https://ewscripps.brightspotcdn.com/2c/7a/2284f50e49c1b7595592ddfc51f5/hbo.png",
             channel     : "livestreaming",
-            videoUrl    : "https://liveorigin01.hbogoasia.com:8443/origin/live/main/SIG/index.m3u8",
+            videoUrl    : "http://4ce5e2d62ee2c10e43c709f9b87c44d5.streamhost.cc/m3u8/Indonesia/b630a001384603f.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
