--- a/embed/r6.html
+++ b/embed/r6.html
@@ -22,7 +22,7 @@
         var video_title = "Live Streaming";
     </script>
  <div id="video" class="fp-slim fp-mute"></div>
-<script src="https://cdn1.mbahnunungonline.net/js/nnVideo.core.js?v=98c76261ffc">
+<script src="https://warningfm.github.io/nnVideo/nnVideo.core.js?v=98c76261ffc">
         {
             target      : 'video',
             title       : 'Live Streaming',
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "https://ewscripps.brightspotcdn.com/2c/7a/2284f50e49c1b7595592ddfc51f5/hbo.png",
             channel     : "livestreaming",
-            videoUrl    : "http://4ce5e2d62ee2c10e43c709f9b87c44d5.streamhost.cc/m3u8/Indonesia/b630a001384603f.m3u8",
+            videoUrl    : "https://liveorigin01.hbogoasia.com:8443/origin/live/main/SIG/index.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
