--- a/embed/r6.html
+++ b/embed/r6.html
@@ -29,7 +29,7 @@
             autoplay    : false,
             mute        : false,
             live        : true,
-            imageUrl    : "https://ewscripps.brightspotcdn.com/2c/7a/2284f50e49c1b7595592ddfc51f5/hbo.png",
+            imageUrl    : "https://3dwarehouse.sketchup.com/warehouse/v1.0/publiccontent/6b082a0e-354f-4bc9-a516-80c765f3b4cc",
             channel     : "livestreaming",
             videoUrl    : "https://liveorigin01.hbogoasia.com:8443/origin/live/main/SIG/index.m3u8",
             adRules     : '',
