--- a/embed/jaktv.html
+++ b/embed/jaktv.html
@@ -37,7 +37,7 @@
         title: 'JAKTV',       
         image: 'https://3.bp.blogspot.com/-TxC76ElPUEQ/XMsZnlEZe7I/AAAAAAAALZ0/1lIHh69eQXwNESzxplUoMj6vhzJlprCZwCLcBGAs/s1600/jaktv-tv-stream.jpg?v=8.3.2',       
         sources: [
-            {file: 'https://cdn-telkomsel-01.akamaized.net/Content/HLS/Live/channel(7a73ed02-e0de-4df1-8da3-5abfd75f24bd)/index.m3u8'},
+            {file: 'https://tv.mbahnunungonline.net/playlist/jaktv.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
