--- a/embed/jaktv.html
+++ b/embed/jaktv.html
@@ -13,7 +13,7 @@
     </style>
     <script type="text/javascript">
     </script>
-    <script src="//ssl.p.jwpcdn.com/player/v/8.2.2/jwplayer.js?v=1.1.0.0.222"></script>
+    <script src="//ssl.p.jwpcdn.com/player/v/8.20.2jwplayer.js?v=1.1.0.0.222"></script>
     <script>jwplayer.key = "9dOyFG96QFb9AWbR+FhhislXHfV1gIhrkaxLYfLydfiYyC0s";</script>
 </head>
 <body bgcolor="transparent" text="white" topmargin="0" leftmargin="0" rightmargin="0">
