--- a/embed/jaktv.html
+++ b/embed/jaktv.html
@@ -4,8 +4,8 @@
     <title>JAKTV</title>
     <meta name="robots" content="noindex">
     
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/jwplayer.css' />
-    <link type='text/css' rel='stylesheet' href='https://cdn1.mbahnunungonline.net/css/dist/v7/player.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/jwplayer.css' />
+    <link type='text/css' rel='stylesheet' href='https://cdn4.mbahnunungonline.net/css/v7/player.css' />
     <style type="text/css">
         body { margin:0 auto; padding:0; background:#EEE; overflow: hidden; }
         #title { font:bold 24px/36px Arial, sans-serif; color:#000; margin:40px auto 10px auto; display:none; text-shadow:#FFF 2px 2px 0; }
