--- a/embed/aswajatv.html
+++ b/embed/aswajatv.html
@@ -19,8 +19,8 @@
        <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://nuchannel.tv/media/slideshow/1592665190122cdda157c2d459e96ada263e9815e5.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://kastproxy-us.herokuapp.com/http://stream1.ninmedia.tv:1935/nuchannel/udp.stream_360p/playlist.m3u8" type="application/x-mpegURL" />
+        <video poster="https://1.bp.blogspot.com/-vvnceKAsI7g/YLevY4uHBuI/AAAAAAAABDU/9T6M3eAI3hoxHr65U3SUMzJCIh_lhQCtgCLcBGAsYHQ/s0/nuChannel.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://5d63d49f772ce.streamlock.net/nuchannel/udp.stream_360p/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
