--- a/embed/sbc.html
+++ b/embed/sbc.html
@@ -7,7 +7,7 @@
        <meta name="platform" content="desktop" />
        <meta name="Live Streaming" content="streaming" />
        <!-- End Meta Ads -->
-       <title>MetroTV Live Streaming</title>
+       <title>Live Streaming</title>
        <style>
            body {
                margin:0;
