--- a/embed/aljazeera.html
+++ b/embed/aljazeera.html
@@ -17,7 +17,7 @@
       <div id="vjs-video-embed" class="left relative"></div>
       <div id="my-video" class="video_embed_hls post_embed_video_center">
       <video class="video-js vjs-default-skin vjs-16-9" controls autoplay></video>
-      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"Magna Channel",poster:"https://1.bp.blogspot.com/-41VrraKgvvw/XxFcTcxsvoI/AAAAAAAAAyw/Ecz8GAFqTPk5tSOWLf64McsHzaXO3Nw6wCLcBGAsYHQ/s728/frekuensi-terbaru-magna-channel.png?v=8.3.2",sources:[{src:"https://edge.medcom.id/live-edge/smil:magna.smil/playlist.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
+      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"Magna Channel",poster:"https://1.bp.blogspot.com/-41VrraKgvvw/XxFcTcxsvoI/AAAAAAAAAyw/Ecz8GAFqTPk5tSOWLf64McsHzaXO3Nw6wCLcBGAsYHQ/s728/frekuensi-terbaru-magna-channel.png?v=8.3.2",sources:[{src:"https://cdn-telkomsel-01.akamaized.net/Content/HLS/Live/channel(85534711-b312-4ed5-8832-6fe000e8fb86)/index.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
   </div>
  
   </body>
