--- a/embed/sbc.html
+++ b/embed/sbc.html
@@ -19,7 +19,7 @@
        <script src="//warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
 	   
        <div align="center">
-        <video poster="https://1.bp.blogspot.com/-41VrraKgvvw/XxFcTcxsvoI/AAAAAAAAAyw/Ecz8GAFqTPk5tSOWLf64McsHzaXO3Nw6wCLcBGAsYHQ/s728/frekuensi-terbaru-magna-channel.png" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <video poster="https://1.bp.blogspot.com/-S_OYXm610E0/YLe5yoMR1lI/AAAAAAAABDc/-moQkjQNBaEcn1lKMhjIn3Z9ooyIInFKwCLcBGAsYHQ/s0/magna-tv-c3b724.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
         <source src="https://edge.medcom.id/live-edge/smil:magna.smil/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
