--- a/embed/metrotv.html
+++ b/embed/metrotv.html
@@ -31,7 +31,7 @@
             live        : true,
             imageUrl    : "../img/thumbs/metrotv.jpg?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "https://edge.medcom.id/live-edge/smil:metro.smil/playlist.m3u8",
+            videoUrl    : "https://cdn-telkomsel-01.akamaized.net/Content/HLS/Live/channel(bd164a95-722d-40db-a596-687c8123f197)/index.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
