--- a/embed/rhs.html
+++ b/embed/rhs.html
@@ -1,41 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Live Streaming</title>
-
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="initial-scale = 1.0, user-scalable = no, width=device-width, height=device-height, maximum-scale=1.0">
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="description" content="Live Streaming" />
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flowplayer/7.2.7/skin/skin.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-
-<style>
+   <head>
+       <meta charset="utf-8" />
+       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+       <!-- Start Meta Ads -->
+       <meta name="platform" content="desktop" />
+       <meta name="site_name" content="streaming" />
+       <!-- End Meta Ads -->
+       <title>Live Streaming</title>
+       <style>
            body {
                margin:0;
-               padding:10;
+               padding:0;
                overflow: hidden;
            }
        </style>
-<script>
-        var video_title = "Live Streaming";
-    </script>
-<div id="Streaming" class="fp-slim fp-mute"></div>
-<script src="//cdn1.mbahnunungonline.net/nnVideo/nnVideo.core.js?v=9f75c5bc">
-        {
-            target      : 'Streaming',
-            title       : 'Live Streaming',
-            autoplay    : true,
-            mute        : false,
-            live        : true,
-            imageUrl    : '../img/thumbs/Hits.jpg?v=8.3.2',
-            channel     : 'livestreaming',
-            videoUrl    : 'https:\/\/t4.mbahnunungonline.net\/uq2663\/h\/h37\/index.m3u8',
-            fluid       : 'true',
-            features: {
-                loadByDiv:true,
-                smartAutoplay: true            }
-        }
-        </script>
-</body>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+       <script src="https://warningfm.github.io/ajax/libs/hola_player/package/dist/hola_player.js"></script>
+	   
+       <div align="center">
+        <video poster="https://www.useetv.com/pimages/tvposter/rodja.png?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
+        <source src="https://tv.rodja.live/live/ngrp:rodja_all/playlist.m3u8" type="application/x-mpegURL" />
+       </video>
+     <script>
+    (function(){
+      window.hola_player({title: 'Rodja TV'});
+    })();
+  </script>
+     </div>
+   </body>
 </html>
