--- a/embed/nettv.html
+++ b/embed/nettv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://4.bp.blogspot.com/-6pdFkNw_o1M/W-1VGPlQTFI/AAAAAAAAKGg/YsSal-Fcn_8JzyML2LUi0xavh2WHat0RwCPcBGAYYCw/s1600/nettv.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://zet.pluginsandthemes.ro/http://rr2.dens.tv/s/s08/index.m3u8" type="application/x-mpegURL" />
+        <source src="https://kastproxy-us.herokuapp.com/http://rr2.dens.tv/s/s08/index.m3u8" type="application/x-mpegURL" />
         </video>
      <script>
     (function(){
