--- a/embed/kix2.html
+++ b/embed/kix2.html
@@ -34,7 +34,7 @@
             live        : true,
             imageUrl    : "https://3.bp.blogspot.com/-8DRIreS2Ooo/W9hBgKaNv0I/AAAAAAAAJ40/e5LzI7nbx6YbUu9hCZ8MJQyWmHbJ0PxFQCLcBGAs/s1600/KIX_logo.png?v=8.3.2",
             channel     : "livestreaming",
-            videoUrl    : "http://rr.dens.tv/h/h07/01.m3u8",
+            videoUrl    : "http://rr1.dens.tv/h/h07/index.m3u8",
             adRules     : '',
             features: {
                 loadByDiv:true,
