--- a/embed/kix.html
+++ b/embed/kix.html
@@ -28,9 +28,9 @@
     title="KIX HD"
     poster=""
     data-setup='{"quality":true}'>
-  <source data-fluid-hd src="https://kastproxy-us.herokuapp.com/http://rr.dens.tv/h/h07/index2.m3u8" title="1080p" type="application/x-mpegURL">
-  <source data-fluid-hd src="https://liveanevia.mncnow.id/live/eds/Animax/sa_hls/Animax.m3u8" title="720p" type="application/x-mpegURL">
-  <source src='https://liveanevia.mncnow.id/live/eds/KIX/sa_hls/KIX.m3u8' title="480p" type='application/x-mpegURL' />
+  <source data-fluid-hd src="https://kastproxy-us.herokuapp.com/http://rr1.dens.tv/h/h07/index.m3u8" title="1080p" type="application/x-mpegURL">
+  <source data-fluid-hd src="http://rr1.dens.tv/h/h07/index.m3u8" title="720p" type="application/x-mpegURL">
+  <source src='http://rr1.dens.tv/h/h07/index.m3u8' title="480p" type='application/x-mpegURL' />
   <p class="vjs-no-js">
     To view this video please enable JavaScript, and consider upgrading to a
     web browser that
