--- a/embed/antv.html
+++ b/embed/antv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://i.imgur.com/gtAKMIZ.jpg" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://cdn4.mbahnunungonline.net/m3u8/b630a001384603f.m3u8" type="application/x-mpegURL" />
+        <source src="http://cdn4.mbahnunungonline.net/m3u8/id/b630a001384603f.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
     (function(){
