--- a/live/dangdutz.html
+++ b/live/dangdutz.html
@@ -47,7 +47,7 @@
         title: 'Maleo Channel',       
         image: 'https://1.bp.blogspot.com/-dwkRQHKsuig/YLdj2p40j1I/AAAAAAAABDM/KTha5O3z1ikUI73Ex0L88Ikx-enlWlQSQCLcBGAsYHQ/s0/maleo.jp',       
         sources: [
-            {file: 'https://5d63d49f772ce.streamlock.net/maleo/udp.stream_360p/playlist.m3u8'},
+            {file: 'https://5d63d49f772ce.streamlock.net/maleo/udp.stream/playlist.m3u8'},
             {file: 'https://edge.nim.mivo.tv/video/assets/oops.m3u8'}
             ],
         captions: [
