--- a/embed/aswajatv.html
+++ b/embed/aswajatv.html
@@ -20,7 +20,7 @@
 	   
        <div align="center">
         <video poster="https://1.bp.blogspot.com/-vvnceKAsI7g/YLevY4uHBuI/AAAAAAAABDU/9T6M3eAI3hoxHr65U3SUMzJCIh_lhQCtgCLcBGAsYHQ/s0/nuChannel.jpg?v=8.3.2" id="video-player" class="video-js vjs-fluid vjs-default-skin" height="340" width="596" controls autoplay>
-        <source src="https://5d63d49f772ce.streamlock.net/nuchannel/udp.stream_360p/playlist.m3u8" type="application/x-mpegURL" />
+        <source src="https://5d63d49f772ce.streamlock.net/nuchannel/udp.stream/playlist.m3u8" type="application/x-mpegURL" />
        </video>
      <script>
       window.hola_player();
