--- a/embed/dmi.html
+++ b/embed/dmi.html
@@ -16,7 +16,7 @@
       <div id="vjs-video-embed" class="left relative"></div>
       <div id="my-video" class="video_embed_hls post_embed_video_center">
       <video class="video-js vjs-default-skin vjs-16-9" controls autoplay></video>
-      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"DMI",poster:"../img/thumbs/dmi.jpg?v=8.3.2",sources:[{src:"https://5d63d49f772ce.streamlock.net/tawaftv/rtmp.stream/playlist.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
+      <script>(function(){var a={linear:"",};var b=document.location.search.substr(1);window.hola_player({title:"TAWAFTV",poster:"../img/thumbs/tawaftv.jpg?v=8.3.2",sources:[{src:"https://5d63d49f772ce.streamlock.net/tawaftv/rtmp.stream/playlist.m3u8",}],ads:{adTagUrl:a[b||"linear"]||b,},settings:{quality:true,},watermark:{image:'',position:'bottom-left',fadeTime:5000,},})})();</script>
   </div>
  
   </body>
