--- a/embed/jaktv.html
+++ b/embed/jaktv.html
@@ -52,7 +52,7 @@
     jwplayer().on('play', function(){
         setTimeout(function(){
             var textAlt = document.querySelectorAll('#' + jwplayer().id + ' .jw-controlbar-center-group .jw-text-alt')[0];
-            if(textAlt) textAlt.innerHTML = 'dangdutz';
+            if(textAlt) textAlt.innerHTML = 'JAKTV';
         },300);
     });
 </script>
